--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/react": "^18.2.36",
     "@types/react-dom": "^18.2.14",
+    "@types/react-redux": "^7.1.29",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.1.1",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "react-redux": "^8.1.3",
     "sass": "^1.69.5",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
