:rotating_light::wrench: Configuration of Eslint

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "build": "tsc && vite build",
     "build-preview": "vite preview",
     "update": "pnpm update || npm update",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --report-unused-disable-directives && echo '\u001b[32mESLint n'a trouvé aucune erreur\u001b[0m'",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix --report-unused-disable-directives && echo '\u001b[32mESLint n'a trouvé aucune erreur\u001b[0m'",
+    "lint": "eslint src/**/*.{ts,tsx}  --report-unused-disable-directives && echo '\u001b[32mESLint n'a trouvé aucune erreur\u001b[0m'",
+    "lint & fix": "eslint src/**/*.{ts,tsx} --fix  --report-unused-disable-directives && echo '\u001b[32mESLint n'a trouvé aucune erreur\u001b[0m'",
     "clean": "rd /s /q build",
     "clean:all": "rd /s /q node_modules build & rd /s /q build"
   },
@@ -16,13 +16,14 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.9.7",
-    "@types/react": "^18.2.36",
-    "@types/react-dom": "^18.2.14",
-    "@types/react-redux": "^7.1.29",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@types/react-redux": "^7.1.30",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "@vitejs/plugin-react": "^4.1.1",
     "eslint": "^8.53.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "react-redux": "^8.1.3",
