--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,8 +20,7 @@
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module",
-        "project": ["./tsconfig.json", "./tsconfig.node.json"],
-        "tsconfigRootDir": "__dirname"
+        "project": ["./tsconfig.json", "./tsconfig.vite.json"]
     },
     "plugins": ["@typescript-eslint", "react", "react-refresh"],
     "rules": {
@@ -29,7 +28,6 @@
         "react/jsx-uses-react": "off",
         "react/react-in-jsx-scope": "off",
         "indent": ["error", 4],
-        "linebreak-style": ["error", "windows"],
         "quotes": ["error", "double"],
         "semi": ["error", "always"],
         "max-params": ["error", 3],
