--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "starter-vite-react-redux_toolkit-typescript_scss",
     "scripts": {
         "start": "vite",
+        "test": "vitest",
         "build": "tsc && vite build",
         "build-preview": "vite preview",
         "update": "pnpm update || npm update",
@@ -16,6 +17,10 @@
     },
     "devDependencies": {
         "@reduxjs/toolkit": "^1.9.7",
+        "@testing-library/dom": "^9.3.3",
+        "@testing-library/jest-dom": "^6.1.4",
+        "@testing-library/react": "^14.1.2",
+        "@testing-library/user-event": "^14.5.1",
         "@types/node": "^20.9.1",
         "@types/react": "^18.2.37",
         "@types/react-dom": "^18.2.15",
@@ -27,9 +32,11 @@
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.4",
+        "jsdom": "^22.1.0",
         "react-redux": "^8.1.3",
         "sass": "^1.69.5",
         "typescript": "^5.2.2",
-        "vite": "^4.5.0"
+        "vite": "^4.5.0",
+        "vitest": "^0.34.6"
     }
 }
