--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
         "lib": ["ES2020", "DOM", "DOM.Iterable"],
         "module": "ESNext",
         "skipLibCheck": true,
-        "types": ["vite/client"],
+        "types": ["vite/client", "vitest/globals"],
 
         /* Bundler mode */
         "moduleResolution": "bundler",
@@ -30,6 +30,6 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
     },
-    "include": ["src"],
+    "include": ["src", "src/tests/setup.ts"],
     "references": [{ "path": "./tsconfig.vite.json" }]
 }
