--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,60 +22,148 @@
         "sourceType": "module",
         "project": ["./tsconfig.json", "./tsconfig.vite.json"]
     },
-    "plugins": ["@typescript-eslint", "react", "react-refresh", "@stylistic/js"],
+    "plugins": ["@typescript-eslint", "react", "react-refresh", "@stylistic"],
     "rules": {
-        "max-lines-per-function": ["warn", 100],
-        "max-len": ["warn", 175],
-        "max-lines": ["error", 200],
-        "indent": ["error", 4],
-        "react-refresh/only-export-components": ["warn", { "allowConstantExport": true }],
-        "max-params": ["error", 3],
-        "max-nested-callbacks": ["error", 5],
-        "max-depth": ["error", 5],
+        // Stylistic plugin
+        "@stylistic/array-bracket-newline": ["error", { "multiline": false, "minItems": 2 }],
+        "@stylistic/array-bracket-spacing": ["error", "never", { "singleValue": false, "objectsInArrays": false, "arraysInArrays": false }],
+        "@stylistic/array-element-newline": "error",
+        "@stylistic/arrow-parens": ["error", "as-needed"],
+        "@stylistic/arrow-spacing": "error",
+        "@stylistic/block-spacing": "error",
+        "@stylistic/brace-style": ["error", "1tbs"],
+        "@stylistic/comma-dangle": ["error", {
+            "arrays": "never",
+            "objects": "always-multiline",
+            "imports": "never",
+            "exports": "never",
+            "functions": "never"
+        }],
+        "@stylistic/comma-spacing": ["error", { "before": false, "after": true }],
+        "@stylistic/comma-style": ["error", "last"],
+        "@stylistic/computed-property-spacing": ["error", "never"],
+        "@stylistic/eol-last": ["error", "always"],
+        "@stylistic/function-call-spacing": ["error", "never"],
+        "@stylistic/function-paren-newline": ["error", "multiline-arguments"],
+        "@stylistic/implicit-arrow-linebreak": ["error", "beside"],
+        "@stylistic/indent": ["error", 4],
+        "@stylistic/jsx-quotes": ["error", "prefer-double"],
+        "@stylistic/keyword-spacing": ["error", { "before": true, "after": true }],
+        "@stylistic/lines-between-class-members": ["error", "always"],
+        "@stylistic/max-len": ["error", { "code": 80, "tabWidth": 4, "ignoreTrailingComments": true }],
+        "@stylistic/max-statements-per-line": ["error", { "max": 1 }],
+        "@stylistic/multiline-ternary": ["error", "always-multiline"],
+        "@stylistic/new-parens": "error",
+        "@stylistic/newline-per-chained-call": ["error", { "ignoreChainWithDepth": 2 }],
+        "@stylistic/no-confusing-arrow": ["error", { "allowParens": true, "onlyOneSimpleParam": false }],
+        "@stylistic/no-extra-parens": "error",
+        "@stylistic/no-extra-semi": "error",
+        "@stylistic/no-floating-decimal": "error",
+        "@stylistic/no-mixed-operators": [
+            "error",
+            {
+                "groups": [
+                    ["&", "|", "^", "~", "<<", ">>", ">>>"],
+                    ["&&", "||"]
+                ]
+            }
+        ],
+        "@stylistic/no-mixed-spaces-and-tabs": "error",
+        "@stylistic/no-multi-spaces": "error",
+        "@stylistic/no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 1, "maxBOF": 0 }],
+        "@stylistic/no-tabs": ["error", { "allowIndentationTabs": true }],
+        "@stylistic/no-trailing-spaces": ["error", { "ignoreComments": true }],
+        "@stylistic/no-whitespace-before-property": "error",
+        "@stylistic/object-curly-newline": ["error", { "consistent": true, "minProperties": 2 }],
+        "@stylistic/object-curly-spacing": ["error", "never"],
+        "@stylistic/quote-props": ["error", "always"],
+        "@stylistic/quotes": ["error", "double", { "avoidEscape": true, "allowTemplateLiterals": true }],
+        "@stylistic/rest-spread-spacing": ["error", "never"],
+        "@stylistic/semi": ["error", "always"],
+        "@stylistic/semi-spacing": ["error", { "before": false, "after": true }],
+        "@stylistic/semi-style": ["error", "last"],
+        "@stylistic/space-before-blocks": "error",
+        "@stylistic/space-before-function-paren": "error",
+        "@stylistic/space-in-parens": ["error", "never"],
+        "@stylistic/space-infix-ops": "error",
+        "@stylistic/space-unary-ops": "error",
+        "@stylistic/spaced-comment": ["error", "always"],
+        "@stylistic/switch-colon-spacing": "error",
+        "@stylistic/template-curly-spacing": ["error", "never"],
+        "@stylistic/wrap-iife": ["error", "outside"],
+        "@stylistic/wrap-regex": "error",
+        // Stylistic specific to JSX/Typescript
+        "@stylistic/member-delimiter-style": "error",
+        "@stylistic/type-annotation-spacing": ["error", { "before": false, "after": true }],
+        "@stylistic/jsx-child-element-spacing": "error",
+        "@stylistic/jsx-closing-bracket-location": "error",
+        "@stylistic/jsx-closing-tag-location": "error",
+        "@stylistic/jsx-curly-brace-presence": ["error", { "props": "never", "children": "never", "propElementValues": "always" }],
+        "@stylistic/jsx-curly-newline": ["error", { "multiline": "consistent", "singleline": "consistent" }],
+        "@stylistic/jsx-equals-spacing": ["error", "never"],
+        "@stylistic/jsx-first-prop-new-line": ["error", "multiline-multiprop"],
+        "@stylistic/jsx-indent": ["error", 4, { "checkAttributes": true, "indentLogicalExpressions": true }],
+        "@stylistic/jsx-indent-props": ["error", 4],
+        "@stylistic/jsx-max-props-per-line": ["error", { "maximum": 1, "when": "always" }],
+        "@stylistic/jsx-one-expression-per-line": ["error", { "allow": "none" }],
+        "@stylistic/jsx-props-no-multi-spaces": "error",
+        "@stylistic/jsx-self-closing-comp": ["error", { "component": true, "html": true }],
+        "@stylistic/jsx-sort-props": ["error", { "ignoreCase": true, "callbacksLast": true, "shorthandFirst": true }],
+        "@stylistic/jsx-tag-spacing": ["error", { "beforeSelfClosing": "always" }],
+        "@stylistic/jsx-wrap-multilines": "error",
+        // React-refresh plugin rules
+        "react-refresh/only-export-components": ["error", { "allowConstantExport": true }],
+        // React plugin rules
         "react/jsx-uses-react": "off",
-        "react/react-in-jsx-scope": "off",
         "react/no-unescaped-entities": ["error", { "forbid": [">", "\"", "}"] }],
-        "quotes": ["error", "double"],
-        "semi": ["error", "always"],
-        "no-await-in-loop": "error",
-        "no-constant-binary-expression": "error",
-        "no-self-compare": "error",
-        "no-template-curly-in-string": "error",
-        "no-unmodified-loop-condition": "error",
-        "no-unreachable-loop": "error",
-        "no-use-before-define": "error",
-        "require-await": "error",
-        "prefer-object-has-own": "error",
-        "prefer-destructuring": "error",
-        "prefer-const": "error",
-        "prefer-arrow-callback": "error",
-        "operator-assignment": "error",
-        "no-warning-comments": "error",
-        "no-var": "error",
-        "no-useless-return": "error",
-        "no-useless-concat": "error",
-        "no-useless-catch": "error",
-        "no-unused-expressions": "error",
-        "no-unneeded-ternary": "error",
-        "no-underscore-dangle": "error",
-        "no-undefined": "error",
-        "no-undef-init": "error",
-        "no-throw-literal": "error",
-        "no-redeclare": "error",
-        "no-loop-func": "error",
-        "no-lone-blocks": "error",
-        "no-label-var": "error",
-        "no-extra-label": "error",
-        "no-eval": "error",
-        "no-console": "error",
-        "no-alert": "error",
-        "new-cap": "error",
-        "init-declarations": "error",
-        "eqeqeq": "error",
-        "dot-notation": "error",
+        "react/react-in-jsx-scope": "off",
+        // Eslint classic rules
+        "block-scoped-var": "error",
+        "consistent-return": "error",
         "default-case": "error",
         "default-case-last": "error",
-        "consistent-return": "error",
-        "block-scoped-var": "error"
+        "dot-notation": "error",
+        "eqeqeq": "error",
+        "init-declarations": "error",
+        "max-depth": ["error", 5],
+        "max-lines": ["error", 200],
+        "max-lines-per-function": ["error", 100],
+        "max-nested-callbacks": ["error", 5],
+        "max-params": ["error", 3],
+        "new-cap": "error",
+        "no-alert": "error",
+        "no-await-in-loop": "error",
+        "no-console": "error",
+        "no-constant-binary-expression": "error",
+        "no-eval": "error",
+        "no-extra-label": "error",
+        "no-label-var": "error",
+        "no-lone-blocks": "error",
+        "no-loop-func": "error",
+        "no-redeclare": "error",
+        "no-self-compare": "error",
+        "no-template-curly-in-string": "error",
+        "no-throw-literal": "error",
+        "no-undef-init": "error",
+        "no-undefined": "error",
+        "no-underscore-dangle": "error",
+        "no-unmodified-loop-condition": "error",
+        "no-unneeded-ternary": "error",
+        "no-unreachable-loop": "error",
+        "no-unused-expressions": "error",
+        "no-use-before-define": "error",
+        "no-useless-catch": "error",
+        "no-useless-concat": "error",
+        "no-useless-return": "error",
+        "no-var": "error",
+        "no-warning-comments": "error",
+        "operator-assignment": "error",
+        "prefer-arrow-callback": "error",
+        "prefer-const": "error",
+        "prefer-destructuring": "error",
+        "prefer-object-has-own": "error",
+        "quotes": ["error", "double"],
+        "require-await": "error",
+        "semi": ["error", "always"]
     }
 }
