--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     },
     "devDependencies": {
         "@reduxjs/toolkit": "^1.9.7",
-        "@stylistic/eslint-plugin-js": "^1.4.1",
+        "@stylistic/eslint-plugin": "^1.4.1",
         "@testing-library/dom": "^9.3.3",
         "@testing-library/jest-dom": "^6.1.4",
         "@testing-library/react": "^14.1.2",
