--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:react/recommended",
-        "plugin:react-hooks/recommended"
+        "plugin:react-hooks/recommended",
+        "prettier"
     ],
     "settings": {
         "react": {
@@ -24,38 +25,74 @@
     },
     "plugins": ["@typescript-eslint", "react", "react-refresh", "@stylistic"],
     "rules": {
+        // Indent, space and tabs rules
+        "@stylistic/indent": ["error", 4],
+        "@stylistic/jsx-indent": [
+            "error",
+            4,
+            {"checkAttributes": true, "indentLogicalExpressions": true}
+        ],
+        "@stylistic/jsx-indent-props": ["error", 4],
+        "@stylistic/no-mixed-spaces-and-tabs": "error",
+        "@stylistic/no-tabs": "error",
+        "@stylistic/max-len": [
+          "error",
+          {"code": 80, "tabWidth": 4, "ignoreTrailingComments": true}
+      ],
+
         // Stylistic plugin
-        "@stylistic/array-bracket-newline": ["error", { "multiline": false, "minItems": 2 }],
-        "@stylistic/array-bracket-spacing": ["error", "never", { "singleValue": false, "objectsInArrays": false, "arraysInArrays": false }],
+        "@stylistic/array-bracket-newline": [
+            "error",
+            {"multiline": false, "minItems": 2}
+        ],
+        "@stylistic/array-bracket-spacing": [
+            "error",
+            "never",
+            {
+                "singleValue": false,
+                "objectsInArrays": false,
+                "arraysInArrays": false
+            }
+        ],
         "@stylistic/array-element-newline": "error",
-        "@stylistic/arrow-parens": ["error", "as-needed"],
+        "@stylistic/arrow-parens": ["error", "always"],
         "@stylistic/arrow-spacing": "error",
         "@stylistic/block-spacing": "error",
         "@stylistic/brace-style": ["error", "1tbs"],
-        "@stylistic/comma-dangle": ["error", {
-            "arrays": "never",
-            "objects": "always-multiline",
-            "imports": "never",
-            "exports": "never",
-            "functions": "never"
-        }],
-        "@stylistic/comma-spacing": ["error", { "before": false, "after": true }],
+        "@stylistic/comma-dangle": [
+            "error",
+            {
+                "arrays": "never",
+                "objects": "always-multiline",
+                "imports": "never",
+                "exports": "never",
+                "functions": "never"
+            }
+        ],
+        "@stylistic/comma-spacing": ["error", {"before": false, "after": true}],
         "@stylistic/comma-style": ["error", "last"],
         "@stylistic/computed-property-spacing": ["error", "never"],
         "@stylistic/eol-last": ["error", "always"],
         "@stylistic/function-call-spacing": ["error", "never"],
         "@stylistic/function-paren-newline": ["error", "multiline-arguments"],
         "@stylistic/implicit-arrow-linebreak": ["error", "beside"],
-        "@stylistic/indent": ["error", 4],
         "@stylistic/jsx-quotes": ["error", "prefer-double"],
-        "@stylistic/keyword-spacing": ["error", { "before": true, "after": true }],
+        "@stylistic/keyword-spacing": [
+            "error",
+            {"before": true, "after": true}
+        ],
         "@stylistic/lines-between-class-members": ["error", "always"],
-        "@stylistic/max-len": ["error", { "code": 80, "tabWidth": 4, "ignoreTrailingComments": true }],
-        "@stylistic/max-statements-per-line": ["error", { "max": 1 }],
+        "@stylistic/max-statements-per-line": ["error", {"max": 1}],
         "@stylistic/multiline-ternary": ["error", "always-multiline"],
         "@stylistic/new-parens": "error",
-        "@stylistic/newline-per-chained-call": ["error", { "ignoreChainWithDepth": 2 }],
-        "@stylistic/no-confusing-arrow": ["error", { "allowParens": true, "onlyOneSimpleParam": false }],
+        "@stylistic/newline-per-chained-call": [
+            "error",
+            {"ignoreChainWithDepth": 2}
+        ],
+        "@stylistic/no-confusing-arrow": [
+            "error",
+            {"allowParens": true, "onlyOneSimpleParam": false}
+        ],
         "@stylistic/no-extra-parens": "error",
         "@stylistic/no-extra-semi": "error",
         "@stylistic/no-floating-decimal": "error",
@@ -68,19 +105,27 @@
                 ]
             }
         ],
-        "@stylistic/no-mixed-spaces-and-tabs": "error",
         "@stylistic/no-multi-spaces": "error",
-        "@stylistic/no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 1, "maxBOF": 0 }],
-        "@stylistic/no-tabs": ["error", { "allowIndentationTabs": true }],
-        "@stylistic/no-trailing-spaces": ["error", { "ignoreComments": true }],
+        "@stylistic/no-multiple-empty-lines": [
+            "error",
+            {"max": 2, "maxEOF": 1, "maxBOF": 0}
+        ],
+        "@stylistic/no-trailing-spaces": ["error", {"ignoreComments": true}],
         "@stylistic/no-whitespace-before-property": "error",
-        "@stylistic/object-curly-newline": ["error", { "consistent": true, "minProperties": 2 }],
+        "@stylistic/object-curly-newline": [
+            "error",
+            {"multiline": true, "minProperties": 3}
+        ],
         "@stylistic/object-curly-spacing": ["error", "never"],
         "@stylistic/quote-props": ["error", "always"],
-        "@stylistic/quotes": ["error", "double", { "avoidEscape": true, "allowTemplateLiterals": true }],
+        "@stylistic/quotes": [
+            "error",
+            "double",
+            {"avoidEscape": true, "allowTemplateLiterals": true}
+        ],
         "@stylistic/rest-spread-spacing": ["error", "never"],
         "@stylistic/semi": ["error", "always"],
-        "@stylistic/semi-spacing": ["error", { "before": false, "after": true }],
+        "@stylistic/semi-spacing": ["error", {"before": false, "after": true}],
         "@stylistic/semi-style": ["error", "last"],
         "@stylistic/space-before-blocks": "error",
         "@stylistic/space-before-function-paren": "error",
@@ -94,28 +139,55 @@
         "@stylistic/wrap-regex": "error",
         // Stylistic specific to JSX/Typescript
         "@stylistic/member-delimiter-style": "error",
-        "@stylistic/type-annotation-spacing": ["error", { "before": false, "after": true }],
+        "@stylistic/type-annotation-spacing": "error",
         "@stylistic/jsx-child-element-spacing": "error",
         "@stylistic/jsx-closing-bracket-location": "error",
         "@stylistic/jsx-closing-tag-location": "error",
-        "@stylistic/jsx-curly-brace-presence": ["error", { "props": "never", "children": "never", "propElementValues": "always" }],
-        "@stylistic/jsx-curly-newline": ["error", { "multiline": "consistent", "singleline": "consistent" }],
+        "@stylistic/jsx-curly-brace-presence": [
+            "error",
+            {
+                "props": "never",
+                "children": "never",
+                "propElementValues": "always"
+            }
+        ],
+        "@stylistic/jsx-curly-newline": [
+            "error",
+            {"multiline": "consistent", "singleline": "consistent"}
+        ],
         "@stylistic/jsx-equals-spacing": ["error", "never"],
         "@stylistic/jsx-first-prop-new-line": ["error", "multiline-multiprop"],
-        "@stylistic/jsx-indent": ["error", 4, { "checkAttributes": true, "indentLogicalExpressions": true }],
-        "@stylistic/jsx-indent-props": ["error", 4],
-        "@stylistic/jsx-max-props-per-line": ["error", { "maximum": 1, "when": "always" }],
-        "@stylistic/jsx-one-expression-per-line": ["error", { "allow": "none" }],
+        "@stylistic/jsx-max-props-per-line": [
+            "error",
+            {"maximum": 1, "when": "always"}
+        ],
+        "@stylistic/jsx-one-expression-per-line": ["error", {"allow": "none"}],
         "@stylistic/jsx-props-no-multi-spaces": "error",
-        "@stylistic/jsx-self-closing-comp": ["error", { "component": true, "html": true }],
-        "@stylistic/jsx-sort-props": ["error", { "ignoreCase": true, "callbacksLast": true, "shorthandFirst": true }],
-        "@stylistic/jsx-tag-spacing": ["error", { "beforeSelfClosing": "always" }],
+        "@stylistic/jsx-self-closing-comp": [
+            "error",
+            {"component": true, "html": true}
+        ],
+        "@stylistic/jsx-sort-props": [
+            "error",
+            {
+                "ignoreCase": true,
+                "callbacksLast": true,
+                "shorthandFirst": true
+            }
+        ],
+        "@stylistic/jsx-tag-spacing": [
+            "error",
+            {"beforeSelfClosing": "always"}
+        ],
         "@stylistic/jsx-wrap-multilines": "error",
         // React-refresh plugin rules
-        "react-refresh/only-export-components": ["error", { "allowConstantExport": true }],
+        "react-refresh/only-export-components": [
+            "error",
+            {"allowConstantExport": true}
+        ],
         // React plugin rules
         "react/jsx-uses-react": "off",
-        "react/no-unescaped-entities": ["error", { "forbid": [">", "\"", "}"] }],
+        "react/no-unescaped-entities": ["error", {"forbid": [">", "\"", "}"]}],
         "react/react-in-jsx-scope": "off",
         // Eslint classic rules
         "block-scoped-var": "error",
