--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "tsc && vite build",
         "build-preview": "vite preview",
         "update": "pnpm update || yarn upgrade || npm update",
+        "prettier": "prettier --write src/**/*",
         "lint": "eslint src/**/*.{ts,tsx}  --report-unused-disable-directives && echo '\u001b[32mESLint n'a trouvé aucune erreur\u001b[0m'",
         "lint & fix": "eslint src/**/*.{ts,tsx} --fix  --report-unused-disable-directives && echo '\u001b[32mESLint n'a trouvé aucune erreur\u001b[0m'",
         "clean": "rd /s /q build",
@@ -30,10 +31,12 @@
         "@typescript-eslint/parser": "^6.12.0",
         "@vitejs/plugin-react": "^4.2.0",
         "eslint": "^8.54.0",
+        "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.4",
         "jsdom": "^22.1.0",
+        "prettier": "3.1.0",
         "react-redux": "^8.1.3",
         "sass": "^1.69.5",
         "typescript": "^5.3.2",
