--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,7 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:react/recommended",
-        "plugin:react-hooks/recommended",
-        "prettier"
+        "plugin:react-hooks/recommended"
     ],
     "settings": {
         "react": {
@@ -21,7 +20,10 @@
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module",
-        "project": ["./tsconfig.json", "./tsconfig.vite.json"]
+        "project": ["./tsconfig.json", "./tsconfig.vite.json"],
+        "ecmaFeatures": {
+            "jsx": true
+        }
     },
     "plugins": ["@typescript-eslint", "react", "react-refresh", "@stylistic"],
     "rules": {
@@ -36,9 +38,9 @@
         "@stylistic/no-mixed-spaces-and-tabs": "error",
         "@stylistic/no-tabs": "error",
         "@stylistic/max-len": [
-          "error",
-          {"code": 80, "tabWidth": 4, "ignoreTrailingComments": true}
-      ],
+            "error",
+            {"code": 80, "tabWidth": 4, "ignoreTrailingComments": true}
+        ],
 
         // Stylistic plugin
         "@stylistic/array-bracket-newline": [
@@ -93,7 +95,11 @@
             "error",
             {"allowParens": true, "onlyOneSimpleParam": false}
         ],
-        "@stylistic/no-extra-parens": "error",
+        "@stylistic/no-extra-parens": [
+            "error",
+            "all",
+            {"ignoreJSX": "multi-line"}
+        ],
         "@stylistic/no-extra-semi": "error",
         "@stylistic/no-floating-decimal": "error",
         "@stylistic/no-mixed-operators": [
@@ -112,9 +118,12 @@
         ],
         "@stylistic/no-trailing-spaces": ["error", {"ignoreComments": true}],
         "@stylistic/no-whitespace-before-property": "error",
-        "@stylistic/object-curly-newline": [
+        "object-curly-newline": [
             "error",
-            {"multiline": true, "minProperties": 3}
+            {
+                "ImportDeclaration": {"multiline": true, "minProperties": 3},
+                "ExportDeclaration": {"multiline": true, "minProperties": 3}
+            }
         ],
         "@stylistic/object-curly-spacing": ["error", "never"],
         "@stylistic/quote-props": ["error", "always"],
@@ -187,8 +196,30 @@
         ],
         // React plugin rules
         "react/jsx-uses-react": "off",
-        "react/no-unescaped-entities": ["error", {"forbid": [">", "\"", "}"]}],
         "react/react-in-jsx-scope": "off",
+        "react/no-unescaped-entities": ["error", {"forbid": [">", "\"", "}"]}],
+        "react/boolean-prop-naming": "error",
+        "react/button-has-type": "error",
+        "react/jsx-indent": [
+            "error",
+            4,
+            {"checkAttributes": true, "indentLogicalExpressions": true}
+        ],
+        "react/jsx-indent-props": ["error", 4],
+        "react/jsx-newline": "error",
+        "react/jsx-one-expression-per-line": "error",
+        "react/jsx-wrap-multilines": [
+            "error",
+            {
+                "declaration": "parens-new-line",
+                "assignment": "parens-new-line",
+                "return": "parens-new-line",
+                "arrow": "parens-new-line",
+                "condition": "parens-new-line",
+                "logical": "parens-new-line",
+                "prop": "parens-new-line"
+            }
+        ],
         // Eslint classic rules
         "block-scoped-var": "error",
         "consistent-return": "error",
