--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
     "version": "1.0.0",
     "name": "starter-vite-react-redux_toolkit-typescript_scss",
     "scripts": {
-        "start": "vite",
+        "start": "vite --mode dev",
         "test": "vitest",
         "update": "pnpm update || yarn upgrade || npm update",
         "prettier": "prettier --write src/**/*.{js,jsx,ts,tsx,css,scss,json}",
         "lint": "eslint src/**/*.{ts,tsx} --report-unused-disable-directives && echo '\u001b[32mESLint n'a trouvé aucune erreur\u001b[0m'",
         "lint & fix": "eslint src/**/*.{ts,tsx} --fix --report-unused-disable-directives && echo '\u001b[32mESLint n'a trouvé aucune erreur\u001b[0m'",
-        "build": "tsc && vite build",
+        "build": "tsc && vite build --mode prod",
         "build-preview": "vite preview",
         "clean": "rd /s /q build",
         "clean:all": "rd /s /q node_modules build & rd /s /q build"
@@ -24,12 +24,12 @@
         "@testing-library/jest-dom": "^6.2.0",
         "@testing-library/react": "^14.1.2",
         "@testing-library/user-event": "^14.5.2",
-        "@types/node": "^20.10.7",
+        "@types/node": "^20.11.0",
         "@types/react": "^18.2.47",
         "@types/react-dom": "^18.2.18",
         "@types/react-redux": "^7.1.33",
-        "@typescript-eslint/eslint-plugin": "^6.18.0",
-        "@typescript-eslint/parser": "^6.18.0",
+        "@typescript-eslint/eslint-plugin": "^6.18.1",
+        "@typescript-eslint/parser": "^6.18.1",
         "@vitejs/plugin-react": "^4.2.1",
         "eslint": "^8.56.0",
         "eslint-plugin-react": "^7.33.2",
