:goal_net::memo: Add the error handling server, update readme and link to the api starter

--- a/.env.prod.exemple
+++ b/.env.prod.exemple
@@ -1,1 +1,6 @@
-VITE_BORED_API_URL="https://www.boredapi.com/api/activity?participants=2"
+# Running application variables
+VITE_API_URL=
+
+# Error server handling variables
+VITE_ERROR_API_URL=
+VITE_PROJECT_NAME=
