--- a/.env.dev.exemple
+++ b/.env.dev.exemple
@@ -1,3 +1,7 @@
+# Running application variables
 VITE_PORT=
+VITE_API_URL=
 
-VITE_BORED_API_URL="https://www.boredapi.com/api/activity?participants=2"
+# Error server handling variables
+VITE_ERROR_API_URL=
+VITE_PROJECT_NAME=
