:rocket::arrow_up:Upgrade .env files to make their more understandable and update dependencies

--- a/.env.dev.exemple
+++ b/.env.dev.exemple
@@ -1,7 +1,7 @@
 # Running application variables
-VITE_PORT=
-VITE_API_URL=
+VITE_LOCAL_PORT=
+VITE_API_URL=""
 
 # Error server handling variables
-VITE_ERROR_API_URL=
-VITE_PROJECT_NAME=
+VITE_ERROR_API_URL=""
+VITE_PROJECT_NAME=""
