--- a/.env.prod.exemple
+++ b/.env.prod.exemple
@@ -1,6 +1,6 @@
 # Running application variables
-VITE_API_URL=
+VITE_API_URL=""
 
 # Error server handling variables
-VITE_ERROR_API_URL=
-VITE_PROJECT_NAME=
+VITE_ERROR_API_URL=""
+VITE_PROJECT_NAME=""
