:building_construction: Big architectural change, remake all starter with new knowledge

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,39 @@
 {
-    "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "@/*": ["src/*"],
-            "@assets/*": ["src/assets/*"],
-            "@components/*": ["src/components/*"],
-            "@store/*": ["src/store/*"],
-            "@slices/*": ["src/store/slices/*"],
-            "@styles/*": ["src/styles/*"],
-            "@tests/*": ["src/tests/*"],
-            "@utilities/*": ["src/utilities/*"]
-        },
-        "target": "ES2020",
-        "useDefineForClassFields": true,
-        "lib": ["ES2020", "DOM", "DOM.Iterable"],
-        "module": "ESNext",
-        "skipLibCheck": true,
-        "types": ["vite/client", "vitest/globals"],
-
-        /* Bundler mode */
-        "moduleResolution": "bundler",
-        "allowImportingTsExtensions": true,
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "noEmit": true,
-        "jsx": "react-jsx",
-
-        /* Linting */
-        "strict": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@src/*": ["src/*"],
+      "@api/*": ["src/api/*"],
+      "@assets/*": ["src/assets/*"],
+      "@component/*": ["src/component/*"],
+      "@enum/*": ["src/enum/*"],
+      "@helper/*": ["src/helper/*"],
+      "@store/*": ["src/store/*"],
+      "@style/*": ["src/style/*"],
+      "@translation/*": ["src/assets/translation/*"],
+      "@types/*": ["src/types/*"]
     },
-    "include": ["src"],
-    "references": [{"path": "./tsconfig.vite.json"}]
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+    "types": [],
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
+  },
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
