--- a/package.json
+++ b/package.json
@@ -1,50 +1,43 @@
 {
-    "version": "1.0.0",
-    "name": "starter-vite-react-redux_toolkit-typescript_scss",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Alexandre-RICHARD/starter-vite-react-redux_toolkit-typescript_scss"
-    },
+    "type": "module",
     "scripts": {
-        "start": "vite --open --mode dev",
-        "test": "vitest --mode dev",
-        "update": "pnpm update || yarn upgrade || npm update",
-        "prettier": "prettier --write src/**/*.{js,jsx,ts,tsx,css,scss,json}",
-        "lint": "eslint src/**/*.{ts,tsx} --report-unused-disable-directives && echo '\u001b[32mESLint n'a trouvé aucune erreur\u001b[0m'",
-        "lint & fix": "eslint src/**/*.{ts,tsx} --fix --report-unused-disable-directives && echo '\u001b[32mESLint n'a trouvé aucune erreur\u001b[0m'",
-        "build": "tsc && vite build --mode prod",
-        "build-preview": "vite preview --open",
-        "clean": "rd /s /q build 2> nul || rm -rf build",
-        "clean:all": "rd /s /q build node_modules 2> nul || rm -rf build node_modules"
+      "start": "vite --open --mode dev",
+      "update": "pnpm update || yarn upgrade || npm update",
+      "lint": "eslint .",
+      "lint & fix": "eslint . --fix",
+      "build": "tsc && vite build --mode prod",
+      "build-preview": "vite preview --open",
+      "clean": "rd /s /q build || rm -rf build",
+      "clean:all": "rd /s /q build node_modules || rm -rf build node_modules"
     },
     "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1"
     },
     "devDependencies": {
-        "@reduxjs/toolkit": "^1.9.7",
-        "@stylistic/eslint-plugin": "^1.5.4",
-        "@testing-library/dom": "^9.3.4",
-        "@testing-library/jest-dom": "^6.2.0",
-        "@testing-library/react": "^14.1.2",
-        "@testing-library/user-event": "^14.5.2",
-        "@types/node": "^20.11.5",
-        "@types/react": "^18.2.48",
-        "@types/react-dom": "^18.2.18",
-        "@types/react-redux": "^7.1.33",
-        "@typescript-eslint/eslint-plugin": "^6.19.0",
-        "@typescript-eslint/parser": "^6.19.0",
-        "@vitejs/plugin-react": "^4.2.1",
-        "eslint": "^8.56.0",
-        "eslint-plugin-react": "^7.33.2",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.5",
-        "jsdom": "^22.1.0",
-        "prettier": "3.1.0",
-        "react-redux": "^8.1.3",
-        "sass": "^1.70.0",
-        "typescript": "^5.3.3",
-        "vite": "^4.5.1",
-        "vitest": "^0.34.6"
+      "@stylistic/eslint-plugin": "^2.1.0",
+      "@types/node": "^20.12.11",
+      "@types/react": "^18.3.1",
+      "@types/react-dom": "^18.3.0",
+      "@typescript-eslint/eslint-plugin": "^7.8.0",
+      "@typescript-eslint/parser": "^7.8.0",
+      "@vitejs/plugin-react-swc": "^3.6.0",
+      "eslint": "^8.57.0",
+      "eslint-config-airbnb": "^19.0.4",
+      "eslint-config-airbnb-typescript": "^18.0.0",
+      "eslint-config-prettier": "^9.1.0",
+      "eslint-plugin-import": "^2.29.1",
+      "eslint-plugin-jsx-a11y": "^6.8.0",
+      "eslint-plugin-prettier": "^5.1.3",
+      "eslint-plugin-react": "^7.34.1",
+      "eslint-plugin-react-hooks": "^4.6.2",
+      "eslint-plugin-react-refresh": "^0.4.7",
+      "prettier": "^3.2.5",
+      "sass": "^1.77.0",
+      "typescript": "^5.4.5",
+      "typescript-eslint": "^7.8.0",
+      "vite": "^5.2.11",
+      "zustand": "^4.5.2"
     }
-}
+  }
+  
