--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-    "type": "module",
-    "scripts": {
-      "start": "vite --open --mode dev",
-      "update": "pnpm update || yarn upgrade || npm update",
-      "lint": "eslint .",
-      "lint & fix": "eslint . --fix",
-      "build": "tsc && vite build --mode prod",
-      "build-preview": "vite preview --open",
-      "clean": "rd /s /q build || rm -rf build",
-      "clean:all": "rd /s /q build node_modules || rm -rf build node_modules"
-    },
-    "dependencies": {
-      "react": "^18.3.1",
-      "react-dom": "^18.3.1"
-    },
-    "devDependencies": {
-      "@stylistic/eslint-plugin": "^2.1.0",
-      "@types/node": "^20.12.11",
-      "@types/react": "^18.3.1",
-      "@types/react-dom": "^18.3.0",
-      "@typescript-eslint/eslint-plugin": "^7.8.0",
-      "@typescript-eslint/parser": "^7.8.0",
-      "@vitejs/plugin-react-swc": "^3.6.0",
-      "eslint": "^8.57.0",
-      "eslint-config-airbnb": "^19.0.4",
-      "eslint-config-airbnb-typescript": "^18.0.0",
-      "eslint-config-prettier": "^9.1.0",
-      "eslint-plugin-import": "^2.29.1",
-      "eslint-plugin-jsx-a11y": "^6.8.0",
-      "eslint-plugin-prettier": "^5.1.3",
-      "eslint-plugin-react": "^7.34.1",
-      "eslint-plugin-react-hooks": "^4.6.2",
-      "eslint-plugin-react-refresh": "^0.4.7",
-      "prettier": "^3.2.5",
-      "sass": "^1.77.0",
-      "typescript": "^5.4.5",
-      "typescript-eslint": "^7.8.0",
-      "vite": "^5.2.11",
-      "zustand": "^4.5.2"
-    }
+  "type": "module",
+  "scripts": {
+    "start": "vite --open --mode dev",
+    "test": "vitest --mode dev",
+    "update": "pnpm update || yarn upgrade || npm update",
+    "lint": "eslint .",
+    "lint & fix": "eslint . --fix",
+    "build": "tsc && vite build --mode prod",
+    "build-preview": "vite preview --open",
+    "clean": "rd /s /q build || rm -rf build",
+    "clean:all": "rd /s /q build node_modules || rm -rf build node_modules"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@stylistic/eslint-plugin": "^2.1.0",
+    "@types/node": "^20.12.11",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "prettier": "^3.2.5",
+    "sass": "^1.77.1",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.8.0",
+    "vite": "^5.2.11",
+    "vitest": "^1.6.0",
+    "zustand": "^4.5.2"
   }
-  
+}
