--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "jsdom": "^24.0.0",
     "prettier": "^3.2.5",
     "sass": "^1.77.1",
     "typescript": "^5.4.5",
